# open-gl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  drawing.md  run
docs/: Doxyfile
notes/: basics.md  requirements.md
src/: CMakeLists.txt  input_mapping.h  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
